---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/utxo_storage_err.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Utxo(
                UtxoDef {
                    name: Identifier {
                        name: "MyUtxo",
                        span: 5..11,
                    },
                    parts: [
                        Storage(
                            [
                                UtxoGlobal {
                                    name: Identifier {
                                        name: "counter",
                                        span: 44..51,
                                    },
                                    ty: TypeAnnotation {
                                        name: [
                                            Identifier {
                                                name: "i64",
                                                span: 53..56,
                                            },
                                        ],
                                        generics: [],
                                    },
                                },
                            ],
                        ),
                    ],
                },
            ),
            span: 0..67,
        },
        Spanned {
            node: Function(
                FunctionDef {
                    export: Some(
                        Script,
                    ),
                    name: Identifier {
                        name: "get",
                        span: 77..80,
                    },
                    params: [],
                    return_type: Some(
                        TypeAnnotation {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 86..89,
                                },
                            ],
                            generics: [],
                        },
                    ),
                    body: Block {
                        statements: [],
                        tail_expression: Some(
                            Spanned {
                                node: ScopedName(
                                    [
                                        Identifier {
                                            name: "counter",
                                            span: 96..103,
                                        },
                                    ],
                                ),
                                span: 96..104,
                            },
                        ),
                        span: 90..106,
                    },
                },
            ),
            span: 67..106,
        },
    ],
}

==== Type error ====
]8;;https://starstream.nightstream.dev/errors/E0001\E0001 (link)]8;;\

  x unknown name `counter`
   ,-[8:5]
 7 | script fn get() -> i64 {
 8 |     counter
   :     ^^^^^^^
 9 | }
   `----
